# python-reactive-ui

./: README.md  README.rst  pyproject.toml
pyact/: component.py  main.py
pyact/backends/gtk3/: __init__.py  render.py
pyact/backends/gtk3/builtin/: box.py  button.py  label.py  progress_bar.py
python_reactive_ui/: __init__.py  component.py  main.py
python_reactive_ui/backends/gtk3/: __init__.py  builtin_component.py  render.py  root.py
python_reactive_ui/backends/gtk3/builtin/: __init__.py  blackbox.py  box.py  button.py  label.py  progress_bar.py
python_reactive_ui/lib/: core.py  hooks.py
tests/: test_pyact.py
