[tool.poetry]
name = "python-reactive-ui"
version = "0.2.9"
description = ""
authors = ["Manuel Brea <m.brea.carreras@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
example = "python_reactive_ui.main:test"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
